# fidget-spinner

./: ball_bearing.py  ball_bearing_part.py  fidget_spinner.assy.py  fidget_spinner_assy.py  pyproject.toml  spinner_holder.py
